<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/index"
            android:title="@string/inicio"
            android:icon="@drawable/ic_home"
            />

        <item
            android:id="@+id/item_Humedad"
            android:title="@string/dato1"
            android:icon="@drawable/ic_water"
            />

        <item
            android:id="@+id/item_Temperatura"
            android:title="@string/dato2"
            android:icon="@drawable/ic_thermometer"

            />

        <item
            android:id="@+id/consultas"
            android:title="@string/consultas"
            android:icon="@drawable/ic_file_search"
            />

        <item
            android:id="@+id/profile"
            android:title="@string/perfil"
            android:icon="@drawable/ic_person"/>

        <item
            android:id="@+id/logout"
            android:title="@string/cerrar_sesi_n"
            android:icon="@drawable/ic_exit_to_app"/>
    </group>



</menu>
